<resources>
    <string name="app_name">Chess</string>
    <string name="playButton">Play !!!</string>
    <string name="king">King</string>
    <string name="queen">Queen</string>
    <string name="rook">Rook</string>
    <string name="bishop">Bishop</string>
    <string name="knight">Knight</string>
    <string name="pawn">Pawn</string>
    <string name="promotionQuestion">Change pawn with :</string>
    <string name="saveBoardPrompt">Save game ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>